# gosh-dl-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  PRD.md  README.md  technical_spec.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: PKGBUILD
packaging/homebrew/: gosh.rb
tests/: cli.rs
